# Public

./: README.md
etc/: mayaSetup.txt  readme.txt.txt
etc/eclipse/: theme-24587.epf
etc/node/: node.config
etc/sublime/: python.sublime-project
plug-ins/: MultiNurbsRivet.mll  VolumePushCollider.mll  readme.txt
src/c++/lessons/01_hello_world/: CMakeLists.txt
src/c++/lessons/02_basic_exceptions/: CMakeLists.txt
src/c++/lessons/03_write_text_file/: CMakeLists.txt
src/c++/lessons/04_read_text_file/: CMakeLists.txt
src/c++/lessons/04_read_text_file/src/: CMakeLists.txt  README.txt  main.cpp
src/c++/lessons/05_file_parsing/: CMakeLists.txt
src/c++/lessons/06_binary_file/: CMakeLists.txt
src/c++/lessons/07_vector/: CMakeLists.txt
src/c++/lessons/08_list/: CMakeLists.txt
src/c++/lessons/09_map/: CMakeLists.txt
src/c++/lessons/10_custom_maps/: CMakeLists.txt
src/c++/lessons/11_multi_maps/: CMakeLists.txt
src/c++/maya_plugins/: .cproject  quatcurve.h
src/c++/maya_plugins/curve/: Makefile
src/c++/maya_plugins/curvecreator/: Makefile  (+1 more)
src/c++/projects/01_springSolver/src/: CMakeLists.txt  pluginMain.cpp  springSolver.cpp  springSolver.h
src/c++/projects/02_pftCurve/src/: CMakeLists.txt  pftCurve.cpp  pftCurve.h  pluginMain.cpp
src/c++/training/: .project
src/python/: readme.txt
src/python/asset_manager/: ui.py
src/python/autorigger_v02_obsolete/: README.md
src/python/tool/: volume_push_collider.py
src/python/utility/: __init__.py  abbreviation.py  attribute.py  median_tree.py  node.py  plugin.py  storage.py  tree.py  udp.py
(+510 files in other folders)
